applications/shell/auth/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: shell-auth
  namespace: shell
spec:
  forwardAuth:
    address: http://shell-auth.shell.svc.cluster.local:3000/verify
