applications/shell/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shell-auth
  namespace: shell
spec:
  selector:
    app: shell-auth
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
